--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "react-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "homepage": "/static/react",
   "dependencies": {
     "@babel/core": "^7.16.0",
